--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6") // 쿼리문 로그 출력 외부 라이브러리, 이런것들은 배포할때는 성능테스트가 꼭 필요하다.
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+//	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
